@@ -1,3 +1,7 @@
+2015/10/05:
+In --infer mode, leave the .ml file around (instead of removing it) if
+ocamlc fails, so we have a chance to understand what's wrong.
+
 2015/09/21:
 Re-established some error messages concerning the mis-use of $i which
 had disappeared on 2015/06/29.
